# simple-chat

./: .gitignore  Cargo.toml  Makefile  README_AMRIT.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  consts.rs  lib.rs  security.rs  tcp_message.rs  telemetry.rs
proto/chat/v1/: chat.proto
scripts/: integration-tests.go
server/: Cargo.toml
server/src/: main.rs
server/src/chat/: broker.rs  client_protocol.rs  connection.rs  message.rs  mod.rs  rate_limiter.rs  room.rs  server_protocol.rs  string.rs  user.rs
